--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -21,7 +21,7 @@
     <div class="flex md:order-2 rtl:space-x-reverse">
       <a *ngIf="!isLoggedIn" routerLink="/condiciones"
         class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">
-        ¿Quieres unirte a nosotros?
+        Want to join us?
       </a>
       <a *ngIf="!isLoggedIn" routerLink="/login" class="ml-2">
         <button type="button"
@@ -36,7 +36,7 @@
           class="absolute right-0 mt-2 w-48 bg-white dark:bg-gray-900 border border-gray-200 dark:border-gray-600 rounded-lg shadow-lg z-10">
           <a *ngIf="isLoggedIn" [routerLink]="['/profile', userId]"
             class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Profile</a>
-          <a *ngIf="isLoggedIn && user.role_id === 2" [routerLink]="['/lista-favoritos', userId]"
+          <a *ngIf="isLoggedIn && user.role_id === 1" [routerLink]="['/lista-favoritos', userId]"
             class="block px-4 py-2 text-gray-800 hover:bg-gray-100 dark:text-white dark:hover:bg-gray-800">Lista de
             Favoritos</a>
           <a [routerLink]="['/messages']"
