--- a/Frontend/src/app/components/favourite-list/favourite-list.component.html
+++ b/Frontend/src/app/components/favourite-list/favourite-list.component.html
@@ -2,11 +2,12 @@
   Favorite List
 </h2>
 
+
 <div class="p-4 max-w-lg mx-auto mt-24">
   <ng-container *ngFor="let favouriteList of favouriteLists.data">
     <ng-container *ngIf="favouriteList.user_id === currentUserID">
-      <details class="mb-2">
-        <summary class="bg-gray-200 dark:bg-gray-800 p-4 rounded-lg cursor-pointer shadow-md mb-4 relative">
+      <details class="mb-4">
+        <summary class="p-4 dark:bg-gray-800 rounded-lg cursor-pointer relative">
           <span class="font-semibold text-gray-900 dark:text-gray-100">{{ favouriteList.name }}</span>
           <div class="absolute top-0 right-0 flex items-center">
             <button class="ml-2 text-green-500 hover:text-green-700 dark:text-green-400 dark:hover:text-green-600"
@@ -19,15 +20,17 @@
             </button>
           </div>
         </summary>
-        <ul class="ml-8 space-y-4">
+        <ul class="dark:bg-gray-800 ml-8 space-y-4">
           <ng-container *ngFor="let advertisementList of advertisementFavouriteLists.data">
             <ng-container *ngIf="advertisementList.favouriteList_id === favouriteList.id">
-              <li class="flex items-center justify-between bg-gray-100 dark:bg-gray-700 p-3 rounded-lg shadow mb-2">
+              <li class="flex items-center justify-between p-3 rounded-lg shadow mb-2">
                 <div class="flex items-center">
-                  <span class="font-semibold text-gray-900 dark:text-gray-100">{{
-                    getAdvertisementTitle(advertisementList.advertisement_id) }}</span>
-                  <img *ngIf="advertisementList.imgUrl" [src]="advertisementList.imgUrl" alt="Advertisement Image"
-                    class="ml-2 h-8 w-8 rounded-full">
+                  <img *ngIf="advertisementList.userImgUrl" [src]="advertisementList.userImgUrl" alt="User Image"
+                    class="ml-2 h-10 w-10 rounded-full object-cover">
+                  <span class="font-semibold text-gray-900 dark:text-gray-100">
+                    {{ getAdvertisementTitle(advertisementList.advertisement_id) }}
+                  </span>
+
                 </div>
                 <button class="ml-2 text-red-500 hover:text-red-700 dark:text-red-400 dark:hover:text-red-600"
                   (click)="deleteAdvertisementFavourite(advertisementList)">
@@ -43,34 +46,22 @@
 </div>
 
 <!-- Modal -->
-<div *ngIf="showModal" class="fixed inset-0 overflow-y-auto flex items-center justify-center">
-  <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-    <!-- Background overlay -->
-    <div class="fixed inset-0 transition-opacity" (click)="closeEditModal()" aria-hidden="true">
-      <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+<div *ngIf="showModal" class="fixed inset-0 flex items-center justify-center z-50">
+  <div class="modal-content">
+    <div>
+      <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100" id="modal-headline">Edit Favorite List</h3>
+      <div class="mt-2">
+        <input type="text" [(ngModel)]="editedListName" placeholder="New List Name"
+          class="form-input mt-1 block w-full">
+      </div>
     </div>
-    <!-- Modal panel -->
-    <br><br><br><br>
-    <div
-      class="w-full inline-block align-bottom bg-white dark:bg-gray-800 rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
-      role="dialog" aria-modal="true" aria-labelledby="modal-headline">
-      <div class="bg-white dark:bg-gray-800 px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-        <!-- Modal content -->
-        <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100" id="modal-headline">Edit Favorite
-          List</h3>
-        <div class="mt-2">
-          <input type="text" [(ngModel)]="editedListName" placeholder="New List Name"
-            class="mt-2 p-2 border border-gray-300 dark:border-gray-600 rounded-md w-full focus:outline-none focus:ring focus:border-blue-500 dark:focus:border-blue-400">
-        </div>
-      </div>
-      <div class="bg-gray-50 dark:bg-gray-700 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-        <!-- Save button -->
-        <button (click)="saveEditedList()" type="button"
-          class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 dark:bg-blue-400 dark:hover:bg-blue-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">Save</button>
-        <!-- Cancel button -->
-        <button (click)="closeEditModal()" type="button"
-          class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 dark:border-gray-600 shadow-sm px-4 py-2 bg-white dark:bg-gray-800 text-base font-medium text-gray-700 dark:text-gray-300 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-200 dark:focus:ring-gray-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
-      </div>
+    <div class="bg-gray-50 dark:bg-gray-700 px-4 py-3 sm:flex sm:flex-row-reverse">
+      <button type="button"
+        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 sm:ml-3 sm:w-auto sm:text-sm"
+        (click)="saveEditedList()">Save</button>
+      <button type="button"
+        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 dark:bg-gray-800 dark:text-gray-300 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:mt-0 sm:w-auto sm:text-sm"
+        (click)="closeEditModal()">Cancel</button>
     </div>
   </div>
 </div>
