--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
       <ng-container *ngFor="let advertisement of filteredAdvertisements">
         <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/3 xl:w-1/3 px-2 md:px-4 mb-4 md:mb-8">
           <div class="bg-white dark:bg-gray-800 rounded-lg overflow-hidden shadow-2xl relative">
-            <button class="absolute top-0 right-0 m-4 bg-red-500 text-white px-2 py-1 rounded" (click)="openForm(advertisement.id)">
+            <button *ngIf="getUserRole(currentUserID) !== 2" class="absolute top-0 right-0 m-4 bg-red-500 text-white px-2 py-1 rounded" (click)="openForm(advertisement.id)">
               <i class="fas fa-heart"></i>
             </button>
             <ng-container *ngFor="let user of users.data">
@@ -55,18 +55,19 @@
                   <div class="mt-1 text-gray-900 dark:text-gray-200">
                     <span>{{advertisement.price_hour}}€/h</span>
                   </div>
-                  <div class="mt-2 flex items-center text-teal-600 dark:text-teal-400 font-semibold">
+                  <div class="mt-2 flex items-center font-semibold">
                     <span>
                       <ng-container *ngFor="let star of [1, 2, 3, 4, 5]">
                         <i class="fas" [ngClass]="{
-                          'fa-star text-yellow-500': star <= round(calculateAverageRating(advertisement.id)),
-                          'far fa-star text-yellow-500': star > round(calculateAverageRating(advertisement.id))
-                        }"></i>
+                          'fa-star': star <= round(averageRatings[advertisement.id] || 0),
+                          'fa-star-o': star > round(averageRatings[advertisement.id] || 0)
+                        }" *ngIf="averageRatings[advertisement.id] !== null" style="color: yellow;"></i>
+                      </ng-container>
+                      <ng-container *ngIf="averageRatings[advertisement.id] === null">
+                        No ratings
                       </ng-container>
                     </span>
                   </div>
-
-
                 </div>
               </div>
             </ng-container>
