--- a/Frontend/src/app/components/messages/messages.component.html
+++ b/Frontend/src/app/components/messages/messages.component.html
@@ -1,44 +1,49 @@
 <div class="chat-container">
   <!-- Lista de destinatarios -->
+  <!-- Lista de destinatarios -->
   <div *ngFor="let recipient of recipients"
-    class="flex items-center p-4 bg-white rounded-lg shadow-xl mx-auto max-w-sm relative m-10 recipient"
+    class="flex items-center p-4 bg-white dark:bg-gray-800 rounded-lg shadow-xl mx-auto max-w-sm relative m-5 recipient"
     (click)="loadMessagesForRecipient(recipient.data.id)">
-    <span
+    <span *ngIf="recipient.newMessage"
       class="text-xs font-bold uppercase px-2 mt-2 mr-2 text-green-900 bg-green-400 border rounded-full absolute top-0 right-0">New</span>
-    <div class="ml-5">
-      <h4 class="text-lg font-semibold leading-tight text-gray-900">{{ recipient.data.name }}</h4>
-      <p class="text-sm text-gray-600">Tienes un nuevo mensaje!</p>
+    <div class="ml-3"> <!-- Reducido el margen izquierdo -->
+      <h4 class="text-lg font-semibold leading-tight text-gray-900 dark:text-gray-200">{{ recipient.data.name }}</h4>
+      <p *ngIf="recipient.newMessage" class="text-sm text-gray-600 dark:text-gray-400">Tienes un nuevo mensaje!</p>
     </div>
   </div>
 
-
+<!-- ------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- Lista de mensajes -->
   <ng-container *ngIf="showMessages">
     <div class="container mx-auto p-4"> <!-- Contenedor central -->
       <div *ngFor="let message of messages" class="w-full mb-6"> <!-- Añadido mb-6 para espacio entre mensajes -->
         <div class="grid pb-11">
-          <div class="flex gap-2.5 mb-4">
-            <img src="https://pagedone.io/asset/uploads/1710412177.png" alt="Shanay image" class="w-10 h-11">
+          <div class="flex gap-2.5 mb-4"
+            [ngClass]="{'justify-start': message.remitente !== senderId, 'justify-end': message.remitente === senderId}">
+            <img [src]="message.senderImage" alt="Sender image" class="w-10 h-11 rounded-full">
             <div class="grid">
-              <h5 class="text-gray-900 text-sm font-semibold leading-snug pb-1">{{ message.senderName }}</h5>
+              <h5 class="text-gray-900 dark:text-gray-200 text-sm font-semibold leading-snug pb-1">{{ message.senderName
+                }}</h5>
               <div class="w-max grid">
-                <div class="px-3.5 py-2 bg-gray-100 rounded justify-start items-center gap-3 inline-flex">
-                  <h5 class="text-gray-900 text-sm font-normal leading-snug">{{ message.content }}</h5>
+                <div class="px-3.5 py-2 bg-gray-100 dark:bg-gray-700 rounded inline-flex"
+                  [ngClass]="{'justify-end': message.remitente !== senderId, 'justify-start': message.remitente === senderId}">
+                  <h5 class="text-gray-900 dark:text-gray-200 text-sm font-normal leading-snug">{{ message.content }}
+                  </h5>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
     </div>
 
 
-    <!-- Formulario para enviar un nuevo mensaje -->
     <!-- Formulario de envío de mensajes -->
     <div class="container mx-auto p-4"> <!-- Contenedor central -->
       <form (submit)="sendMessage($event)">
         <div
-          class="w-full pl-3 pr-1 py-1 rounded-3xl border border-gray-200 items-center gap-2 inline-flex justify-between">
+          class="w-full pl-3 pr-1 py-1 rounded-3xl border border-gray-200 dark:border-gray-600 items-center gap-2 inline-flex justify-between">
           <div class="flex items-center gap-2">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
               <g id="User Circle">
@@ -48,14 +53,15 @@
               </g>
             </svg>
             <input #messageInput
-              class="grow shrink basis-0 text-black text-xs font-medium leading-4 focus:outline-none">
+              class="w-full bg-transparent border-0 py-2 px-4 text-sm text-gray-900 dark:text-gray-200 placeholder-gray-500 focus:outline-none"
+              placeholder="Type your message...">
           </div>
           <div class="flex items-center gap-2">
-            <button type="submit" class="items-center flex px-3 py-2 bg-indigo-600 rounded-full shadow">
+            <button type="submit"
+              class="items-center flex px-3 py-2 bg-indigo-600 dark:bg-indigo-800 rounded-full shadow">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-
               </svg>
-              <h3 class="text-white text-xs font-semibold leading-4 px-2">Send</h3>
+              <h3 class="text-white dark:text-gray-200 text-xs font-semibold leading-4 px-2">Send</h3>
             </button>
           </div>
         </div>
