--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -86,13 +86,18 @@
         </div>
 
         <!-- Botón para Subir Imagen -->
-        <div class="relative z-0 w-full mb-5 group flex items-center">
-          <input type="file" accept="image/*" (change)="onFileSelected($event)" class="hidden" id="imageInput">
-          <label for="imageInput" class="cursor-pointer mr-2">
-            <i class="fas fa-image text-green-700 pr-4"></i>
-          </label>
-          <span class="text-sm text-gray-500">Upload Image</span>
-        </div>
+          <div class="relative z-0 w-full mb-5 group flex items-center">
+            <input type="file" accept="image/*" (change)="onFileSelected($event)" class="hidden" id="imageInput">
+            <label for="imageInput" class="cursor-pointer mr-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400 hover:text-gray-600" fill="none"
+                viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
+                </path>
+              </svg>
+            </label>
+            <span class="text-sm text-gray-500" *ngIf="img">{{ img }}</span> <!-- Mostrar el nombre de la imagen seleccionada -->
+            <span class="text-sm text-gray-500" *ngIf="!img">Upload image</span> <!-- Mostrar este texto si no se ha seleccionado ninguna imagen -->
+          </div>
         <p class="text-xs text-white mb-1">*Inappropriate images are not allowed</p>
         <p class="text-xs text-white">*Images with derogatory and/or political messages are not allowed.</p>
 
