--- a/Frontend/src/app/components/messages/messages.component.html
+++ b/Frontend/src/app/components/messages/messages.component.html
@@ -6,13 +6,14 @@
     (click)="loadMessagesForRecipient(recipient.data.id)">
     <span *ngIf="recipient.newMessage"
       class="text-xs font-bold uppercase px-2 mt-2 mr-2 text-green-900 bg-green-400 border rounded-full absolute top-0 right-0">New</span>
+    <img *ngIf="getUserImageUrl(recipient.data.id)" [src]="getUserImageUrl(recipient.data.id)" alt="User image" class="w-10 h-11 rounded-full"> <!-- Agregado -->
     <div class="ml-3"> <!-- Reducido el margen izquierdo -->
       <h4 class="text-lg font-semibold leading-tight text-gray-900 dark:text-gray-200">{{ recipient.data.name }}</h4>
       <p *ngIf="recipient.newMessage" class="text-sm text-gray-600 dark:text-gray-400">Tienes un nuevo mensaje!</p>
     </div>
-  </div>
+</div>
 
-<!-- ------------------------------------------------------------------------------------------------------------------------------- -->
+  <!-- ------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- Lista de mensajes -->
   <ng-container *ngIf="showMessages">
     <div class="container mx-auto p-4"> <!-- Contenedor central -->
