--- a/Frontend/src/app/components/favourite-list/favourite-list.component.html
+++ b/Frontend/src/app/components/favourite-list/favourite-list.component.html
@@ -2,12 +2,11 @@
   Favorite List
 </h2>
 
-
 <div class="p-4 max-w-lg mx-auto mt-24">
   <ng-container *ngFor="let favouriteList of favouriteLists.data">
     <ng-container *ngIf="favouriteList.user_id === currentUserID">
-      <details class="mb-4">
-        <summary class="p-4 dark:bg-gray-800 rounded-lg cursor-pointer relative">
+      <details class="mb-4 bg-white dark:bg-gray-800 dark:text-gray-100">
+        <summary class="p-4 rounded-lg cursor-pointer relative bg-gray-100 dark:bg-gray-700 dark:text-gray-100">
           <span class="font-semibold text-gray-900 dark:text-gray-100">{{ favouriteList.name }}</span>
           <div class="absolute top-0 right-0 flex items-center">
             <button class="ml-2 text-green-500 hover:text-green-700 dark:text-green-400 dark:hover:text-green-600"
@@ -20,17 +19,16 @@
             </button>
           </div>
         </summary>
-        <ul class="dark:bg-gray-800 ml-8 space-y-4">
+        <ul class="space-y-4 bg-white dark:bg-gray-800">
           <ng-container *ngFor="let advertisementList of advertisementFavouriteLists.data">
             <ng-container *ngIf="advertisementList.favouriteList_id === favouriteList.id">
-              <li class="flex items-center justify-between p-3 rounded-lg shadow mb-2">
+              <li class="flex items-center justify-between p-3 rounded-lg shadow mb-2 bg-gray-100 dark:bg-gray-700">
                 <div class="flex items-center">
                   <img *ngIf="advertisementList.userImgUrl" [src]="advertisementList.userImgUrl" alt="User Image"
                     class="ml-2 h-10 w-10 rounded-full object-cover">
                   <span class="font-semibold text-gray-900 dark:text-gray-100">
                     {{ getAdvertisementTitle(advertisementList.advertisement_id) }}
                   </span>
-
                 </div>
                 <button class="ml-2 text-red-500 hover:text-red-700 dark:text-red-400 dark:hover:text-red-600"
                   (click)="deleteAdvertisementFavourite(advertisementList)">
@@ -46,21 +44,23 @@
 </div>
 
 <!-- Modal -->
-<div *ngIf="showModal" class="fixed inset-0 flex items-center justify-center z-50">
-  <div class="modal-content">
+<div *ngIf="showModal"
+  class="fixed inset-0 flex items-center justify-center z-50 bg-gray-900 bg-opacity-75 dark:bg-gray-900 dark:bg-opacity-75">
+  <div class="modal-content bg-white dark:bg-gray-800 dark:text-white p-4 rounded-lg">
     <div>
-      <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100" id="modal-headline">Edit Favorite List</h3>
+      <h3 class="text-lg leading-6 font-medium text-gray-900 dark:text-gray-100" id="modal-headline">Edit Favorite List
+      </h3>
       <div class="mt-2">
         <input type="text" [(ngModel)]="editedListName" placeholder="New List Name"
-          class="form-input mt-1 block w-full">
+          class="form-input mt-1 block w-full bg-gray-100 dark:bg-gray-700 dark:text-white">
       </div>
     </div>
-    <div class="bg-gray-50 dark:bg-gray-700 px-4 py-3 sm:flex sm:flex-row-reverse">
+    <div class="px-4 py-3 sm:flex sm:flex-row-reverse">
       <button type="button"
         class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 sm:ml-3 sm:w-auto sm:text-sm"
         (click)="saveEditedList()">Save</button>
       <button type="button"
-        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 dark:bg-gray-800 dark:text-gray-300 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:mt-0 sm:w-auto sm:text-sm"
+        class="mt-3 w-full inline-flex justify-center rounded-md shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 dark:bg-gray-800 dark:text-gray-300 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:mt-0 sm:w-auto sm:text-sm"
         (click)="closeEditModal()">Cancel</button>
     </div>
   </div>
