--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -121,16 +121,14 @@
       </a>
       <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400">
         <li>
-          <a href="#" class="hover:underline me-4 md:me-6">About</a>
+          <a routerLink="/aboutus" class="hover:underline me-4 md:me-6">About</a>
+        </li>
+
+        <li>
+          <a routerLink="/condiciones" class="hover:underline me-4 md:me-6">Conditions</a>
         </li>
         <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-        </li>
-        <li>
-          <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-        </li>
-        <li>
-          <a href="#" class="hover:underline">Contact</a>
+          <a routerLink="/contact" class="hover:underline">Contact</a>
         </li>
       </ul>
     </div>
