Soluciones de Registro y pago

--- a/Frontend/src/app/components/condiciones/condiciones.component.html
+++ b/Frontend/src/app/components/condiciones/condiciones.component.html
@@ -28,10 +28,18 @@
     <section class="my-8">
       <h2 class="text-2xl font-bold">Special Offer for Teachers</h2>
       <p>To access all these benefits and become a teacher on our platform, we require a monthly membership
-        fee of 10 euros. This membership will give you full access to all platform features and allow you to
-        start publishing your courses immediately.</p>
+        fee of 20 euros. Additionally, there is a charge of 10 euros for each course announcement you create.
+        This membership will give you full access to all platform features and allow you to start publishing your
+        courses immediately.</p>
       <p>Don't miss the opportunity to join our community of teachers and start sharing your knowledge
         with the world!</p>
+    </section>
+    <section class="my-8">
+      <h2 class="text-2xl font-bold">Student Subscription</h2>
+      <p>Students can access all courses and features on our platform by subscribing for a monthly fee of
+        10 euros. This subscription provides unlimited access to our wide range of courses and learning
+        resources.</p>
+      <p>Start learning today and take the next step in your educational journey with CodeMasterMentors!</p>
     </section>
   </main>
 
